--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <script ="index.ts"></script>
+    <script src="index.ts"></script>
     <!-- <script src="basics.ts"></script> -->
 </body>
 </html>
